--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
 <body>
 
     <header class="header">
-
-        <div class="menu">
-            <div class="logo">
-                <a href="#">LogoCorporativo</a>
-            </div>
-
-            <nav class="nav">
-                <a href="#">Blog</a>
-                <a href="#">Contacto</a>
-            </nav>
-        </div>
-        
+        <img src="./images/adalab-logo.png" alt="">
     </header>
 
-    <section class="section">
-        <h1>Creando Diversidad Digital</h1>
-    </section>
+        <nav>
+            <a href="#">Blog</a>
+            <a href="#">Contacto</a>
+        </nav>
+
+        <div class="container">
+            <section>
+                <h1>Creando Diversidad Digital</h1>
+            </section>
+        </div>
 </body>
 </html>
