--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 <body>
 
     <header class="header">
+        <div class="logo">
         <img src="./images/adalab-logo.png" alt="">
-    </header>
+        </div>
 
-        <nav>
+        <nav class="nav">
             <a href="#">Blog</a>
             <a href="#">Contacto</a>
         </nav>
+    </header>
 
-        <div class="container">
-            <section>
-                <h1>Creando Diversidad Digital</h1>
-            </section>
-        </div>
+        <section class="container">
+            <h1 class="title">Creando Diversidad Digital</h1>
+        </section>
+    </div>
 </body>
 </html>
