--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Módulo 1. Evaluación intermedia</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?
-    family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
 
     <header class="header">
-        <div class="logo">
-        <img src="./images/adalab-logo.png" alt="">
-        </div>
+            <img class="logo" src="./images/adalab-logo.png" title="Logo de Adalab" alt="Adalab logo">
 
-        <nav class="nav">
-            <a href="#">Blog</a>
-            <a href="#">Contacto</a>
+        <nav>
+            <ul class="nav">
+                <li><a class="menu-link" href="#">Blog</a></li>
+                <li><a class="menu-link" href="#">Contacto</a></li>                
+            </ul>
         </nav>
     </header>
 
-        <section class="container">
-            <h1 class="title">Creando Diversidad Digital</h1>
-        </section>
-    </div>
-    
+    <main class="container">
+        <h1 class="title">Creando diversidad digital</h1>
+    </main>
+
 </body>
+
 </html>
